--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical"
     >
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hook UpdateSelection" />
+
     <iel.tzy.watcher.TEditText
         android:id="@+id/edit_text"
         android:layout_width="match_parent"
@@ -15,73 +21,83 @@
         android:hint="请输入文本"
         android:textSize="18sp" />
 
-    <CheckBox
-        android:id="@+id/setComposingText"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="setComposingText" />
+        android:layout_height="200dp">
 
-    <CheckBox
-        android:id="@+id/setComposingRegion"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="setComposingRegion" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
 
-    <CheckBox
-        android:id="@+id/finishComposingText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="finishComposingText" />
+            <CheckBox
+                android:id="@+id/setComposingText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="setComposingText" />
 
-    <CheckBox
-        android:id="@+id/getTextBeforeCursor"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="getTextBeforeCursor" />
+            <CheckBox
+                android:id="@+id/setComposingRegion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="setComposingRegion" />
 
-    <CheckBox
-        android:id="@+id/getTextAfterCursor"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="getTextAfterCursor" />
+            <CheckBox
+                android:id="@+id/finishComposingText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="finishComposingText" />
 
-    <CheckBox
-        android:id="@+id/getExtractedText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="getExtractedText" />
+            <CheckBox
+                android:id="@+id/getTextBeforeCursor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="getTextBeforeCursor" />
 
-    <CheckBox
-        android:id="@+id/getSelectedText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="getSelectedText" />
+            <CheckBox
+                android:id="@+id/getTextAfterCursor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="getTextAfterCursor" />
 
-    <CheckBox
-        android:id="@+id/setSelection"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="setSelection" />
+            <CheckBox
+                android:id="@+id/getExtractedText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="getExtractedText" />
 
-    <CheckBox
-        android:id="@+id/deleteSurroundingText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="deleteSurroundingText" />
+            <CheckBox
+                android:id="@+id/getSelectedText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="getSelectedText" />
 
-    <CheckBox
-        android:id="@+id/commitText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="commitText" />
+            <CheckBox
+                android:id="@+id/setSelection"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="setSelection" />
 
-    <!--  <TextView
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="Hello World!"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintLeft_toLeftOf="parent"
-          app:layout_constraintRight_toRightOf="parent"
-          app:layout_constraintTop_toTopOf="parent" />-->
+            <CheckBox
+                android:id="@+id/deleteSurroundingText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="deleteSurroundingText" />
+
+            <CheckBox
+                android:id="@+id/commitText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="commitText" />
+
+            <CheckBox
+                android:id="@+id/updateSelection"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="updateSelection" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
