--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,4 +100,23 @@
         </LinearLayout>
     </ScrollView>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/clear_edit_text"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:text="清空编辑框" />
+
+        <Button
+            android:id="@+id/set_edit_text"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:text="设置为abcd" />
+
+    </LinearLayout>
+
 </LinearLayout>
